--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/df596957de.js" crossorigin="anonymous"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="bg-gray-400 p-10">
     <div class=" flex flex-col lg:flex lg:flex-row">
         <!-- side nav -->
-        <div class="bg-white w-full lg:w-1/4 ">
+        <div class="bg-white w-full lg:w-1/4 " data-aos="fade-right">
             <div class="flex  items-center  p-3 justify-between ">
                 <div class="flex  items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-red-500 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -127,7 +128,7 @@
             
         </div>
         <!-- main -->
-        <div class="bg-gray-100 flex-grow p-4">
+        <div class="bg-gray-100 flex-grow p-4" data-aos="fade-left">
             <!-- navbar-sm -->
             <nav class="flex justify-between md:hidden">
                  <!-- search -->
@@ -354,5 +355,13 @@
     <script src="http://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="crossorigin="anonymous">
     </script>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+        delay:200,
+        duration:1200,
+        once:false
+    })
+      </script>
 </body>
 </html>
